# wall_e

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: test.yaml
example/dataset/: dataset_processing.py
example/nlp/: cfg.yaml  cfg.yml  deepspeed.json  gpt.py  gpt.yaml  gpt_baseline.py  gpt_simple.py  tune.py  tune.yaml
example/nlp/config/: config.yaml
example/nlp/dataset/: build_smiles.py
example/nlp/dataset/raw/: local_movie_reviews.json
model/: egnn.py  moe.py
model/transformer/: README.md  __init__.py  attention.py  embed.py  ffn.py  layer.py  module.py  norm.py  wrapper.py
test/: test_checkpoint_callback.py
wall_e/: __init__.py  scheduler.py  tunner.py
wall_e/analysis/: jit_analysis.py
wall_e/callback/: __init__.py  base_callback.py  checkpoint_callback.py  early_stop_callback.py  epoch_summary_callback.py  progress_callback.py  summary_callback.py  wandb_callback.py
wall_e/common/: __init__.py  io.py  mixin.py  registry.py  util.py
wall_e/config/: __init__.py  load_config.py  runner.yaml  tune.yaml
wall_e/dataset/: __init__.py  base_dataset.py  dataset.py  utils.py
wall_e/eval/: __init__.py  base_metric.py  evaluator.py  utils.py
wall_e/logging/: __init__.py  logger.py  util.py
wall_e/model/: __init__.py  base_model.py  base_pretrained_model.py
wall_e/model/gnn/: gnn.py
wall_e/model/moe/: moe.py
wall_e/model/transformer/: __init__.py
wall_e/model/transformer/generation/: __init__.py  strategies.py  utils.py
wall_e/model/transformer/module/: __init__.py  attention.py  ffn.py  norm.py
wall_e/model/transformer/wrapper/: __init__.py  decoder.py  decoder_only.py  encoder.py  encoder_decoder.py
wall_e/runner/: activation_checkpointing.py  base_runner.py  runner.py  state.py  util.py
wall_e/runner/loop/: base_loop.py  test_loop.py  train_loop.py  valid_loop.py
wall_e/util/: bio_util.py  dl_util.py
