[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wall_e"
version = "1.0.0"
authors = [
    {name = "Zhicun Zeng", email = "zengzhicun@csu.edu.cn"}
]
keywords = ["artificial intelligence", "deep learning", "develop"]
description = "a personal deep learning experiment framework based on pytorch"
readme = "README.md"
requires-python = ">=3.9"
license = "LGPL-2.1"
classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence Develop",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch",
    "datasets",
    "omegaconf>=1.4.0",
    "numpy",
    "pandas",
    "pyyaml",
    "ray",
    "transformers",
    "rdkit",
    "wandb",
    "matplotlib"
]

[project.optional-dependencies]
deepspeed = ["deepspeed"]
torch_geometric = ["torch_geometric"]
torch_scatter = ["torch_scatter"]
other = ["matplotlib", "torchviz", "graphviz", "pynvml"]

# ------------------ setuptools 配置 ------------------
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["wall_e*"]
exclude = ["example*", "test*", "tmp*", "scripts*", "docs*"]


# ------------------ 可选: 排除非必要数据文件 ------------------
[tool.setuptools.exclude-package-data]
"wall_e" = ["*.yml", "*.yaml", "*.txt"]



